# ros2_ws

./: .gitignore  gui.config  maze_generator.py  path_log.txt  run.bash  run_first.bash  run_second.bash  visualize.py
install/: local_setup.sh  setup.sh
install/jackal_wall_follower/lib/jackal_wall_follower/: main_node
install/jackal_wall_follower/share/jackal_wall_follower/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/jackal_wall_follower/share/jackal_wall_follower/cmake/: jackal_wall_followerConfig.cmake
install/jackal_wall_follower/share/jackal_wall_follower/worlds/: maze.sdf
log/: latest_build
src/jackal_wall_follower/: CMakeLists.txt  package.xml
src/jackal_wall_follower/launch/: restart_controllers.launch.py  start.launch.py  start_robot.launch.py  start_simulation.launch.py
src/jackal_wall_follower/src/: main_node.cpp
worlds/: generated_maze.sdf
